# advent-of-code-parsers

./: LICENSE  README.md  pyproject.toml
aocp/: __init__.py  parsers.py
examples/: aoc-2021.ipynb
examples/aoc-2021/day-01/: example.ipynb
examples/aoc-2021/day-02/: example.ipynb
examples/aoc-2021/day-03/: example.ipynb
examples/aoc-2021/day-04/: example.ipynb
examples/aoc-2021/day-05/: example.ipynb
examples/aoc-2021/day-06/: example.ipynb
examples/aoc-2021/day-07/: example.ipynb
examples/aoc-2021/day-08/: example.ipynb
tests/: test_parsers.py
