[tool.poetry]
name = "aocp"
version = "0.1.0"
description = "A collection of convenient parsers for Advent of Code problems."
authors = ["Miguel Blanco Marcos"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
ipykernel = "^6.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
